fix pagination mobile version

--- a/final-project/src/Pages/Movies/MoviePage.style.css
+++ b/final-project/src/Pages/Movies/MoviePage.style.css
@@ -106,7 +106,10 @@ input[type="radio"]:checked + label {
 }
 
 .pagination-custom {
+  /* border: solid red; */
+  width: 90%;
   display: flex;
+  justify-content: center;
   column-gap: 2rem;
   list-style: none;
   margin-bottom: 2rem;
@@ -193,5 +196,13 @@ input[type="radio"]:checked + label {
 
   .filter-04 select {
     font-size: .92rem;
+  }
+
+  .pagination-custom {
+    column-gap: 1rem;
+  }
+
+  .page-item {
+    padding: 0 .5rem;
   }
 }
